group api by api category
